force-app/main/default/objects/vlocity_cmt__OrchestrationItemLog__b/vlocity_cmt__OrchestrationItemLog__b.object-meta.xml
<CustomObject>
    <description>Represents orchestration item callout attempts. OrchestrationItemLog__b is a big object, which includes orchestration item requests and responses.</description>
    <label>Orchestration Item Log</label>
    <pluralLabel>Orchestration Item Logs</pluralLabel>
</CustomObject>