force-app/main/default/objects/vlocity_cmt__OrchestrationItemLog__b/fields/vlocity_cmt__NumberOfRetries__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__NumberOfRetries__c</fullName>
    <description>The number of orchestration retries initiated by the orchestration item.</description>
    <label>Actual Number Of Retries</label>
    <precision>5</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>