force-app/main/default/objects/vlocity_cmt__OrchestrationItemLog__b/fields/vlocity_cmt__OrchestrationItemId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__OrchestrationItemId__c</fullName>
    <description>The orchestration item associated with the orchestration item log.</description>
    <label>Orchestration Item</label>
    <referenceTo>vlocity_cmt__OrchestrationItem__c</referenceTo>
    <relationshipLabel>Orchestration Item Log</relationshipLabel>
    <relationshipName>OrchestrationItemLog</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>