force-app/main/default/objects/vlocity_cmt__OrchestrationItemLog__b/fields/vlocity_cmt__Request__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__Request__c</fullName>
    <description>The orchestration item request JSON or XML data.</description>
    <label>Request</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>