force-app/main/default/objects/vlocity_cmt__OrchestrationItemLog__b/fields/vlocity_cmt__State__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__State__c</fullName>
    <description>The state of the orchestration item.</description>
    <label>State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>