force-app/main/default/objects/vlocity_cmt__OrchestrationItemLog__b/fields/vlocity_cmt__TimestampReady__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__TimestampReady__c</fullName>
    <description>The date and time the orchestration item was moved to the Ready state.</description>
    <label>Timestamp (Ready)</label>
    <type>DateTime</type>
</CustomField>